safewalk2-platform/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "SafewalkVHDImageURL": {
            "type": "string",
            "metadata": {
                "description": "Set to the URL of the Safewalk VHD image you have uploaded earlier."
            }
        },
        "SafewalkGatewayVHDImageURL": {
            "type": "string",
            "metadata": {
                "description": "Set to the URL of the Safewalk Gateway VHD image you have uploaded earlier."
            }
        },
        "VnetName": {
            "type": "string",
            "defaultValue": "SafewalkVirtualNet",
            "metadata": {
                "description": "A name for the VNet that will be used (either new or existing)."
            }
        },
        "subnetLANName": {
            "type": "string",
            "defaultValue": "SafewalkSubNet",
            "metadata": {
                "description": "A name for a subnet (either new or existing) that will be used to serve the Safewalk server."
            }
        },
        "subnetDMZName": {
            "type": "string",
            "defaultValue": "SafewalkSubNet-DMZ",
            "metadata": {
                "description": "A name for (either new or existing) Internet facing subnet that will be used to serve the Safewalk Gateway."
            }
        },
        "VnetAddressSpace": {
            "type": "string",
            "defaultValue": "10.1.0.0/16",
            "metadata": {
                "description": "The address space of the specified VNet (either new or existing)."
            }
        },
        "subnetLANAddressSpace": {
            "type": "string",
            "defaultValue": "10.1.1.0/24",
            "metadata": {
                "description": "The address space of the specified LAN subnet (either new or existing)."
            }
        },
        "subnetDMZAddressSpace": {
            "type": "string",
            "defaultValue": "10.1.2.0/24",
            "metadata": {
                "description": "The address space of the specified DMZ subnet (either new or existing)."
            }
        },
        "gatewaySubnetAddressSpace": {
            "type": "string",
            "defaultValue": "10.1.0.0/24",
            "metadata": {
                "description": "Address Space of the DMZ subnet in the Vnet (either new or existing)"
            }
        },
        "SafewalkGatewayIP": {
            "type": "string",
            "defaultValue": "10.1.2.4",
            "metadata": {
                "description": "Set to the address that will be assigned to the Safewalk Gateway within the DMZ subnet (e.g. 10.1.2.4)."
            }
        },
        "numberOfSafewalkInstances": {
            "type": "int",
            "defaultValue": 2,
            "allowedValues": [
                1,
                2,
                3,
                4
                ],
            "metadata": {
                "description": "If it's greater than 1, a multimaster cluster of Safewalk nodes will be created and the deployment procedure will take care of configuring the topology between the nodes. To install a single Safewalk node set this parameter to 1."
            }
        },
        "vmPrefix": {
            "type": "string",
            "defaultValue": "safewalk",
            "metadata": {
                "description": "Safewalk VMs prefix"
            }
        },
        "vmUsername": {
            "type": "string",		
            "metadata": {
                "description": "A username for a privileged user that will be created inside the Safewalk servers and Safewalk Gateway operating system."
            }
        },		
        "vmPassword": {
            "type": "securestring",
            "metadata": {
                "description": "The password for the corresponding privileged user account for the Safewalk servers and Safewalk Gateway operating system."
            }
        },
		"SafewalkServerVmSize": {
            "type": "string",
            "defaultValue": "Standard_A1",
            "metadata": {
                "description": "The azure VM size that will be used for the Safewalk server. The same size will be assigned to all the Safewalk servers that will participate in the cluster."
            }
        },
        "SafewalkGatewayVmSize": {
            "type": "string",
            "defaultValue": "Standard_A1",
            "metadata": {
                "description": "The azure VM size that will be used for the Safewalk Gateway."
            }
        },
        "SafewalkServerRootPassword": {
            "type": "securestring",
            "metadata": {
                "description": "The password to set for the root account of the Safewalk server. The same root password will be set to all the Safewalk servers that will participate in the cluster."
            }
        },
        "SafewalkServerAdminPassword": {
            "type": "securestring",
            "metadata": {
                "description": "The password to set for the Safewalk server admin account."
            }
        },
        "SafewalkGatewayRootPassword": {
            "type": "securestring",
            "metadata": {
                "description": "The password to set for the root account of the Safewalk Gateway."
            }
        },
        "_artifactsLocation": {
            "type": "string",
            "metadata": {
                "description": "The base URI where artifacts required by this template are located. When the template is deployed using the accompanying scripts, a private location in the subscription will be used and this value will be automatically generated."
            },
            "defaultValue": "https://raw.githubusercontent.com/Azure/azure-quickstart-templates/safewalk2-platform-beta-dev/safewalk2-platform/"
        },
        "_artifactsLocationSasToken": {
            "type": "securestring",
            "metadata": {
                "description": "The sasToken required to access _artifactsLocation.  When the template is deployed using the accompanying scripts, a sasToken will be automatically generated."
            },
            "defaultValue": ""
        }
    },
    "variables": {
        "vnetID": "[resourceId('Microsoft.Network/virtualNetworks', parameters('VnetName'))]",
        "subnetRef": "[concat(variables('vnetID'), '/subnets/', parameters('subnetLANName'))]",
        "subnetLANAddressSplit": "[split(parameters('subnetLANAddressSpace'), '.')]",
        "subnetLANAddressPrefix": "[concat(variables('subnetLANAddressSplit')[0], '.', variables('subnetLANAddressSplit')[1], '.', variables('subnetLANAddressSplit')[2], '.')]",
        "firstLastIPComponent": 5,
        "firstSafewalkServerIP": "[concat(variables('subnetLANAddressPrefix'), variables('firstLastIPComponent') )]",
        "subnetDMZRef": "[concat(variables('vnetID'), '/subnets/', parameters('subnetDMZName'))]",
        "sizeOfDiskInGBSafewalk" :  "127",
	    "sizeOfDiskInGBGateway" :  "20",
        "location": "[resourceGroup().location]",
        "gatewayPublicIPName": "[concat(parameters('vmPrefix'), '-gateway-public-IP')]",
        "_numberOfSlavesFalse": 1,
        "_numberOfSlavesTrue": "[sub(parameters('numberOfSafewalkInstances'), 1)]",
        "createSlaves": "[greater(variables('_numberOfSlavesTrue'), 0)]",
        "numberOfSlaves": "[variables(concat('_numberOfSlaves', variables('createSlaves')))]",
        "ScriptFolder": "scripts",
        "updateip_templateUri": "[concat(parameters('_artifactsLocation'), '/nested/update-nic.json', parameters('_artifactsLocationSasToken'))]"
    },
    "resources": [
        {
            "type": "Microsoft.Compute/images",
            "name": "[concat(parameters('vmPrefix'),'-server-osImage')]",
            "apiVersion": "2017-03-30",
            "location": "[resourceGroup().location]",
            "properties": {
                "storageProfile": {
                    "osDisk": {
                        "osType": "Linux",
                        "osState": "Generalized",
                        "blobUri": "[parameters('SafewalkVHDImageURL')]",
                        "caching": "ReadWrite",
                        "storageAccountType": "Standard_LRS",
                        "diskSizeGB": "[variables('sizeOfDiskInGBSafewalk')]"
                    }
                }
            }
        },
        {
            "type": "Microsoft.Compute/images",
            "name": "[concat(parameters('vmPrefix'),'-gateway-osImage')]",
            "apiVersion": "2017-03-30",
            "location": "[resourceGroup().location]",
            "properties": {
                "storageProfile": {
                    "osDisk": {
                        "osType": "Linux",
                        "osState": "Generalized",
                        "blobUri": "[parameters('SafewalkGatewayVHDImageURL')]",
                        "caching": "ReadWrite",
                        "storageAccountType": "Standard_LRS",
                        "diskSizeGB": "[variables('sizeOfDiskInGBGateway')]"
                    }
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[concat(parameters('vmPrefix'), '-DMZ-NSG')]",
            "apiVersion": "2017-04-01",
            "location": "[variables('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "destinationAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "access": "Allow",
                            "priority": 500,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "NTP_Inbound",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "123",
                            "destinationPortRange": "123",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "access": "Allow",
                            "priority": 600,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTPS",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "access": "Allow",
                            "priority": 700,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "RADIUS_Inbound",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "1812",
                            "destinationPortRange": "1812",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "access": "Allow",
                            "priority": 800,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "SNMP_Inbound",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "161",
                            "destinationPortRange": "161",
                            "sourceAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "destinationAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "access": "Allow",
                            "priority": 900,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "NTP_Outbound",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "123",
                            "destinationPortRange": "123",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 400,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "8445_authapi_Outbound",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8445",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 500,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "8446_regapi_Outbound",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8446",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 510,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "9445_userportal_Outbound",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9445",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 520,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "RADIUS_Outbound",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "1812",
                            "destinationPortRange": "1812",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 600,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Deny_Outbound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Deny",
                            "priority": 1000,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[concat(parameters('vmPrefix'), '-LAN-NSG')]",
            "apiVersion": "2017-04-01",
            "location": "[variables('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "ssh",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 400,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "NTP_Inbound",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "123",
                            "destinationPortRange": "123",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 500,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "PSQL_Inbound",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5432",
                            "sourceAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 600,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "https",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 700,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "8443_Inbound",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8443",
                            "sourceAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 710,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "8445_Inbound",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8445",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 720,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "8446_Inbound",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8446",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 730,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "9445_Inbound",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9445",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 740,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "RADIUS_Inbound",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "1812",
                            "destinationPortRange": "1812",
                            "sourceAddressPrefix": "[parameters('SafewalkGatewayIP')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 800,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "SNMP_Inbound",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "161",
                            "destinationPortRange": "161",
                            "sourceAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Allow",
                            "priority": 900,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Deny_Internet_Inbound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "access": "Deny",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2017-04-01",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('VnetName')]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[concat(parameters('vmPrefix'), '-LAN-NSG')]",
                "[concat(parameters('vmPrefix'), '-DMZ-NSG')]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('VnetAddressSpace')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('subnetLANName')]",
                        "properties": {
                            "addressPrefix": "[parameters('subnetLANAddressSpace')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', concat(parameters('vmPrefix'), '-LAN-NSG'))]"
                            }
                        }
                    },
                    {
                        "name": "[parameters('subnetDMZName')]",
                        "properties": {
                            "addressPrefix": "[parameters('subnetDMZAddressSpace')]",
                            "privateAccessServices": [],
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', concat(parameters('vmPrefix'), '-DMZ-NSG'))]"
                            }
                        }
                    },
                    {
                        "name": "GatewaySubnet",
                        "properties": {
                            "addressPrefix": "[parameters('gatewaySubnetAddressSpace')]",
                            "privateAccessServices": []
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2017-04-01",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[concat(parameters('vmPrefix'), '-gateway-NIC')]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[variables('gatewayPublicIPName')]",
                "[parameters('VnetName')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[parameters('SafewalkGatewayIP')]",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('vmPrefix'), '-gateway-public-IP'))]"
                            },
                            "subnet": {
                                "id": "[variables('subnetDMZRef')]"
                            }
                        }
                    }
                ],
                "enableIPForwarding": true
            }
        },
        {
            "apiVersion": "2017-04-01",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[concat(parameters('vmPrefix'), '-server-master-NIC')]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[parameters('VnetName')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[concat(variables('subnetLANAddressPrefix'), variables('firstLastIPComponent') )]",
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "condition": "[variables('createSlaves')]",
            "apiVersion": "2017-04-01",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[concat(parameters('vmPrefix'), '-server-slave-', copyIndex(), '-NIC')]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[parameters('VnetName')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig2",
                        "properties": {
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[concat(variables('subnetLANAddressPrefix'), copyIndex(add(variables('firstLastIPComponent'),1)))]",
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            }
                        }
                    }
                ]
            },
            "copy": {
                "name": "server-slave-net-interfaces",
                "count": "[variables('numberOfSlaves')]",
                "mode": "serial",
                "batchSize": 1
            }
        },
        {
            "apiVersion": "2017-04-01",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('gatewayPublicIPName')]",
            "location": "[variables('location')]",
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "apiVersion": "2017-03-30",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[concat(parameters('vmPrefix'), '-gateway')]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('vmPrefix'), '-gateway-NIC')]",
                "[concat('Microsoft.Compute/images/', parameters('vmPrefix'), '-gateway-osImage')]",
                "[concat('Microsoft.Compute/availabilitySets/', parameters('vmPrefix'), '-gateway-AvailabilitySet')]"
            ],
            "properties": {
                "osProfile": {
                    "computerName": "[concat(parameters('vmPrefix'), '-gateway')]",
                    "adminUsername": "[parameters('vmUsername')]",
                    "adminPassword": "[parameters('vmPassword')]"
                },
                "hardwareProfile": {
                    "vmSize": "[parameters('SafewalkGatewayVmSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "id": "[resourceId('Microsoft.Compute/images', concat(parameters('vmPrefix'), '-gateway-osImage'))]"
                    },
                    "osDisk": {
                        "name": "[concat(parameters('vmPrefix'), '-gateway-os-vhd')]",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('vmPrefix'), '-gateway-NIC'))]"
                        }
                    ]
                },
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets', concat(parameters('vmPrefix'), '-gateway-AvailabilitySet'))]"
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('vmPrefix'), '-gateway/installcustomscript')]",
            "apiVersion": "2017-03-30",
            "location": "[variables('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines/', concat(parameters('vmPrefix'), '-server-master'))]",
                "[resourceId('Microsoft.Compute/virtualMachines/', concat(parameters('vmPrefix'), '-gateway') )]",
                "safewalk-slave-servers"
            ],
            "properties": {
                "publisher": "Microsoft.Azure.Extensions",
                "type": "CustomScript",
                "typeHandlerVersion": "2.0",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'configure_gateway_custom_script.sh', parameters('_artifactsLocationSasToken'))]",
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'set_root_password.sh', parameters('_artifactsLocationSasToken'))]",
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'gateway_whitelist_safewalk_server.sh', parameters('_artifactsLocationSasToken'))]",
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'gateway_upgrade.sh', parameters('_artifactsLocationSasToken'))]",
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'setup_snmp.sh', parameters('_artifactsLocationSasToken'))]",
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'setup_timezone.sh', parameters('_artifactsLocationSasToken'))]"
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "[concat('sh configure_gateway_custom_script.sh ', parameters('SafewalkGatewayRootPassword'),' ', parameters('subnetLANAddressSpace'))]"
                }
            }
        },
        {
            "apiVersion": "2017-03-30",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[concat(parameters('vmPrefix'), '-server-master')]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('vmPrefix'), '-server-master-NIC')]",
                "[concat('Microsoft.Compute/images/', parameters('vmPrefix'), '-server-osImage')]",
                "[concat('Microsoft.Compute/availabilitySets/', parameters('vmPrefix'), '-AvailabilitySet')]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('SafewalkServerVmSize')]"
                },
                "osProfile": {
                    "computerName": "[concat(parameters('vmPrefix'), '-server-master')]",
                    "adminUsername": "[parameters('vmUsername')]",
                    "adminPassword": "[parameters('vmPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "id": "[resourceId('Microsoft.Compute/images', concat(parameters('vmPrefix'), '-server-osImage'))]"
                    },
                    "osDisk": {
                        "name": "[concat(parameters('vmPrefix'), '-server-os-master-vhd')]",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('vmPrefix'), '-server-master-NIC'))]"
                        }
                    ]
                },
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets', concat(parameters('vmPrefix'), '-AvailabilitySet'))]"
                }
            }
        },
        {
            "condition": "[variables('createSlaves')]",
            "apiVersion": "2017-03-30",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[concat(parameters('vmPrefix'), '-server-slave-', copyIndex())]",
            "location": "[variables('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces/', concat(parameters('vmPrefix'), '-server-slave-', copyIndex(), '-NIC') )]",
                "[resourceId('Microsoft.Compute/images/', concat(parameters('vmPrefix'), '-server-osImage') )]",
                "[resourceId('Microsoft.Compute/availabilitySets/', concat(parameters('vmPrefix'), '-AvailabilitySet') )]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('SafewalkServerVmSize')]"
                },
                "osProfile": {
                    "computerName": "[concat(parameters('vmPrefix'), '-server-slave-', copyIndex())]",
                    "adminUsername": "[parameters('vmUsername')]",
                    "adminPassword": "[parameters('vmPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "id": "[resourceId('Microsoft.Compute/images', concat(parameters('vmPrefix'), '-server-osImage'))]"
                    },
                    "osDisk": {
                        "name": "[concat(parameters('vmPrefix'), '-server-os-slave-', copyIndex(), '-vhd')]",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('vmPrefix'), '-server-slave-', copyIndex(), '-NIC'))]"
                        }
                    ]
                },
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets', concat(parameters('vmPrefix'), '-AvailabilitySet'))]"
                }
            },
            "copy": {
                "name": "safewalk-slave-servers",
                "count": "[variables('numberOfSlaves')]",
                "mode": "serial",
                "batchSize": 1
            },
            "resources":[
                {
                    "condition": "[variables('createSlaves')]",
                    "type": "Microsoft.Compute/virtualMachines/extensions",
                    "name": "[concat(parameters('vmPrefix'), '-server-slave-', copyIndex(), '/installcustomscript')]",
                    "apiVersion": "2017-03-30",
                    "location": "[variables('location')]",
                    "dependsOn": [
                        "[resourceId('Microsoft.Compute/virtualMachines/', concat(parameters('vmPrefix'), '-server-slave-', copyIndex()) )]",
                        "[resourceId('Microsoft.Compute/virtualMachines/', concat(parameters('vmPrefix'), '-gateway') )]",
                        "[resourceId('Microsoft.Compute/virtualMachines/extensions', concat(parameters('vmPrefix'), '-server-master'), 'installcustomscript')]"
                    ],
                    "properties": {
                        "publisher": "Microsoft.Azure.Extensions",
                        "type": "CustomScript",
                        "typeHandlerVersion": "2.0",
                        "autoUpgradeMinorVersion": true,
                        "settings": {
                            "fileUris": [
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'configure_safewalk_custom_script_slave.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'set_root_password.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_create_gateway.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_bdr_join.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_make_partitions.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_renew_secrets.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_upgrade.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_iptables.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'setup_snmp.sh', parameters('_artifactsLocationSasToken'))]",
                                "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'setup_timezone.sh', parameters('_artifactsLocationSasToken'))]"
                            ]
                        },
                        "protectedSettings": {
                            "commandToExecute": "[concat('sh configure_safewalk_custom_script_slave.sh ', parameters('SafewalkServerRootPassword'), ' ', parameters('SafewalkGatewayIP'), ' ', reference(concat('Microsoft.Network/publicIPAddresses/', variables('gatewayPublicIPName')), '2017-04-01').ipAddress, ' ', parameters('SafewalkGatewayRootPassword'), ' ', variables('firstSafewalkServerIP'), ' ', resourceId('Microsoft.Network/networkInterfaces', concat(parameters('vmPrefix'), '-server-slave-', [...]
                        }
                    }
                }
            ]
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('vmPrefix'), '-server-master/installcustomscript')]",
            "apiVersion": "2017-03-30",
            "location": "[variables('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines/', concat(parameters('vmPrefix'), '-server-master'))]",
                "[resourceId('Microsoft.Compute/virtualMachines/', concat(parameters('vmPrefix'), '-gateway') )]"
            ],
            "properties": {
                "publisher": "Microsoft.Azure.Extensions",
                "type": "CustomScript",
                "typeHandlerVersion": "2.0",
                "autoUpgradeMinorVersion": true,
                "settings":{
                    "fileUris": [
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'configure_safewalk_custom_script_master.sh', parameters('_artifactsLocationSasToken'))]",		
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'set_root_password.sh', parameters('_artifactsLocationSasToken'))]",		
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_create_gateway.sh', parameters('_artifactsLocationSasToken'))]",		
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_bdr_create.sh', parameters('_artifactsLocationSasToken'))]",		
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_make_partitions.sh', parameters('_artifactsLocationSasToken'))]",		
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_renew_secrets.sh', parameters('_artifactsLocationSasToken'))]",		
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_upgrade.sh', parameters('_artifactsLocationSasToken'))]",		
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_iptables.sh', parameters('_artifactsLocationSasToken'))]",		
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'setup_snmp.sh', parameters('_artifactsLocationSasToken'))]",		
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'setup_timezone.sh', parameters('_artifactsLocationSasToken'))]",		
                        "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', 'safewalk_bdr_accept_subnet.sh', parameters('_artifactsLocationSasToken'))]"    
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "[concat('sh configure_safewalk_custom_script_master.sh ', parameters('SafewalkServerRootPassword'), ' ', parameters('SafewalkGatewayIP'), ' ', reference(concat('Microsoft.Network/publicIPAddresses/', variables('gatewayPublicIPName')), '2017-04-01').ipAddress, ' ', parameters('SafewalkGatewayRootPassword'), ' ', variables('firstSafewalkServerIP'), ' ', parameters('subnetLANAddressSpace'), ' ', variables('createSlaves'), ' ', parameters('SafewalkServerAdmin [...]
                }
            }
        },
        {
            "type": "Microsoft.Compute/availabilitySets",
            "name": "[concat(parameters('vmPrefix'), '-AvailabilitySet')]",
            "apiVersion": "2017-03-30",
            "location": "[variables('location')]",
            "sku": {
                "name": "Aligned"
            },
            "properties": {
                "platformUpdateDomainCount": 5,
                "platformFaultDomainCount": 3
            }
        },
        {
            "type": "Microsoft.Compute/availabilitySets",
            "name": "[concat(parameters('vmPrefix'), '-gateway-AvailabilitySet')]",
            "apiVersion": "2017-03-30",
            "location": "[variables('location')]",
            "sku": {
                "name": "Aligned"
            },
            "properties": {
                "platformUpdateDomainCount": 5,
                "platformFaultDomainCount": 3
            }
        }
    ]
}
